--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
-   <div id="divConteudo"> 
+   
     <section id="color-palette">
         <div class="color"></div>
         <div class="color"></div>
@@ -17,7 +17,7 @@
         <div class="color"></div>
     </section>
 
-    <section id="pixel-board">
+    <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
@@ -43,8 +43,8 @@
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
-    </section>
-</div>
+    </div>
+
 
     <script src="script.js"></script>
 </body>
