--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="color"></div>
         <div class="color"></div>
     </section>
+    <br>
+    <button id="clear-board" onclick="clearCanva()" >Limpar</button>
+    <br><br>
+
 
     <div id="pixel-board">
         <div class="pixel"></div>
